<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profilePage.ProfilePage">

    <TextView
        android:id="@+id/firstName"
        android:layout_width="115dp"
        android:layout_height="25dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="52dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="First Name" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="115dp"
        android:layout_height="25dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="88dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Last Name" />

    <TextView
        android:id="@+id/age"
        android:layout_width="115dp"
        android:layout_height="25dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="124dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Age" />

    <TextView
        android:id="@+id/from"
        android:layout_width="115dp"
        android:layout_height="25dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="164dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="From" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="175dp"
        android:layout_height="136dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@drawable/profile_image" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="139dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="208dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Rating" />

    <ImageView
        android:id="@+id/overall_rating"
        android:layout_width="131dp"
        android:layout_height="41dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@drawable/rating_stars" />

    <TextView
        android:id="@+id/no_ratings"
        android:layout_width="106dp"
        android:layout_height="24dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="240dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="No. ratings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_car"
        android:padding="10dp"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/friendlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/friendlist"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/wallet"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_constraintBottom_toStartOf="@id/friendlist"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rate1"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="440dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="George" />

    <ImageView
        android:id="@+id/george_rating"
        android:layout_width="131dp"
        android:layout_height="41dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@drawable/rating_stars" />

    <TextView
        android:id="@+id/rate_george"
        android:layout_width="291dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="492dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="She was amazing, but she was talking waaay too much. Like girl shut your pipe once in a while. Ok?" />

    <include
        android:id="@+id/navigation"
        layout="@layout/item_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>